--- a/5.AdvancedFeatures/Movies.Api/appsettings.json
+++ b/5.AdvancedFeatures/Movies.Api/appsettings.json
@@ -7,6 +7,7 @@
     "Issuer": "https://id.nickchapsas.com",
     "Audience": "https://movies.nickchapsas.com"
   },
+  "ApiKey": "1234567890abcdef",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
